3.3
	+ Copy all the redis keys from 'conf' to 'ro' when saving changes of
	  any module to prevent incoherences
	+ Strip the 'C:\fakepath\' that chrome adds to the file input
	+ Make dump_exceptions key work also for mason exceptions
	+ Pass HTTP_PROXY system environment variable to CGIs as they are
	  used in Zentyal modules
	+ Waiting for Zentyal ready page check is more robust now
	+ Fixed error in the recursive method for getting module dependencies
	+ Fixed JS typo which disabled export backup dialog
	+ Added dbus dependency to avoid problems on some minimal installations
	+ When restoring pre-3.2 backups take in account that apache
	  module was renamed to webadmin
	+ Make sure that we always commit/discard audit of changes when we
	  save/revoke all modules
	+ Add new row attribute "disabled"
	+ Fixed JS glitch which broke the dashboard periodical updates
	+ Better check of referer which skips cloud domain if it does not exists
	+ Avoid warning when stopping a module without FirewallHelper
	+ Include contents of /etc/resolv.conf in bug report
	+ Avoid Apache error screen in login when entering through Zentyal
	  Remote using password
	+ Fix warning comparing undefined string in DomainName type
	+ Rewrite row isEqualTo method using hashElements instead of elements
	+ Only allow to move dashboard widget by its handle
	+ Do not fail if zentyal-mysql.passwd ends with a newline character
	+ Removed old migration code from 3.0 to 3.2
	+ Added Number.prototype.toTimeDiffString in format.js
	+ Added .btn-black CSS class
	+ Set version to 3.3
	+ Added enableInnoDbIfNeeded() to MyDBEngine
	+ Fix loading on custom action buttons
	+ Add icon for openchange module
	+ Add missing use statement in EBox::Types::MultiStateAction
	+ Add icon for openchange module
	+ Service type setter works again
3.2
	+ Set 3.2 versions and non-beta logo
3.1.13
	+ Added missing EBox::Gettext uses, fixes crash in view logs refresh
	+ Minor CSS style fixes